src/app/components/Navbar/Navbar.module.css
.navbar {
  position: fixed;
  top: 0;
  display: flex;
  width: -webkit-fill-available;
  width: 100%;
  justify-content: flex-end;
  align-items: flex-start;
  padding: 1rem;
  color: #fff;
  backdrop-filter: blur(8px);
  background-color: unset;
  z-index: 1000;
  max-width: 150rem;
  margin-left: auto;
  margin-right: auto;
}


.spacingNavbar {
  position: fixed;
  top: 0;
  display: flex;
  width: -webkit-fill-available;
  width: 100%;
  justify-content: flex-end;
  align-items: flex-start;
  padding: 1rem;
  color: #fff;
  backdrop-filter: blur(8px);
  z-index: 1000;
  max-width: 150rem;
  margin-left: auto;
  margin-right: auto;
}

.logo {
  width: 100px;
  position: absolute;
  top: 0px;
  left: 1rem;
  z-index: 1002;
  padding: 1rem;
  padding-top: 0.8rem;
}

.navLinks {
  display: flex;
  gap: 1rem;
  white-space: nowrap;
  text-decoration: none;
}

.selected {
  background: radial-gradient(50% 50% at 50% 50%, rgba(0, 56, 255, 0.75) 0%, rgba(0, 56, 255, 0.0) 100%);
  border-radius: 8px;
  padding: 12px 18px;
  height: 60px;
  background-size: 70px 70px;
  background-position: center;
  background-repeat: no-repeat;
  display: flex;
  font-size: 18px;
  align-items: center;
}

.unselected {
  border-radius: 5px;
  padding: 12px 18px;
  height: 60px;
  display: flex;
  font-size: 18px;
  align-items: center;
}

.mobileMenuIcon {
  height: 0px;
  width: 0px;
  visibility: hidden;
  cursor: pointer;
}

.invisibleMenuIcon {
  visibility: hidden;
}

.bar {
  width: 25px;
  height: 3px;
  background-color: #fff;
  margin: 6px 0;
}

.bigLogo {
position: fixed;
  z-index: 1002;
  padding-top: 0.8rem;
  width: 100vh; /* Initial size, full width */
  max-width: 150rem;
  visibility: hidden;
  padding-left: 2rem;
}

.logoAnimated {
  animation: logoAnimation 1.3s ease, hide 0.001s linear 1.3s 1 forwards; /* Add a transition for a smooth effect */
}

/* Animation for the logo */
@keyframes logoAnimation {
  0% {
    width: 100vh; /* Initial size, full width */
    max-width: 150rem;

  }
  100% {
    width: 100px; /* Final size, adjust as needed */
    visibility: visible;
  }
}

@keyframes hide {
  to {
    opacity: 0;
    visibility: hidden;
  }
}

@media (min-width: 1580px) {
  .selected,
  .unselected {
      font-size: 22px;
  }
}

/* Media query for mobile big screen */
@media (max-width: 1000px) {

    .navbar {
      background-color: rgba(19, 19, 19, 0.3);
      width: 100vw;
      padding: 1rem;
      }

    .navbarMenuOpened {
      background-color: #131313;
    }

    .mobileMenuMaskDeactivated {
      mask: none;
      background-color: #131313;
    }

    .navLinks {
      height: 0px;
      width: 0px;
      visibility: hidden;
      flex-direction: column;
      position: absolute;
      top: 100px; /* Position below the sticky navigation bar */
      right: 0;
      width: 100%;
      background-color: #131313;
      z-index: 1;
      width: 100%;
      text-align: center;
      padding: 0.2rem;
    }

    .navLinks.showMobileMenu {
      display: flex;
      visibility: visible;
      height: auto;
      width: 100%;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      padding-bottom: 2rem;
    }

    .mobileMenuIcon {
      display: block;
      margin-top: 1rem;
      margin-bottom: 1rem;
      padding-right: 1rem;
      width: 60px;
      height: 60px;
      visibility: visible;
    }

    .logo {
      width: 100px;
      margin-top: 0.8rem;
    }

    .bigLogo {
      width: 100px;
    }

    /* Animation for the logo */
  @keyframes logoAnimation {
    0% {
      width: 100vh; /* Initial size, full width */
      max-width: 150rem;
      }
    100% {
      width: 100px; /* Final size, adjust as needed */
      visibility: visible;
    }
  }
}

  /* Media query for mobile small screen */
@media (max-width: 800px) {
  .navbar {
    padding: 0.5rem;
  }

  .logo {
    width: 80px;
    margin-top: 0;
  }

  .bigLogo {
    width: 80px;
  }

  .navLinks {
     top: 80px; /* Position below the sticky navigation bar */
  }

  .mobileMenuIcon {
    width: 50px;
    height: 40px;
    visibility: visible;
  }

    /* Animation for the logo */
@keyframes logoAnimation {
  0% {
    width: 100vh; /* Initial size, full width */
    max-width: 150rem;

  }
  100% {
    width: 80px; /* Final size, adjust as needed */
    visibility: visible;
  }
}
}

